[CIR] Introduce AST attribute interfaces.

--- a/clang/lib/CIR/Lowering/DirectToLLVM/CMakeLists.txt
+++ b/clang/lib/CIR/Lowering/DirectToLLVM/CMakeLists.txt
@@ -12,6 +12,7 @@ add_clang_library(clangCIRLoweringDirectToLLVM
   DEPENDS
   MLIRCIREnumsGen
   MLIRCIROpsIncGen
+  MLIRCIRASTAttrInterfacesIncGen
 
   LINK_LIBS
   clangAST
