--- a/clang/lib/CIR/Lowering/ThroughMLIR/CMakeLists.txt
+++ b/clang/lib/CIR/Lowering/ThroughMLIR/CMakeLists.txt
@@ -12,6 +12,7 @@ add_clang_library(clangCIRLoweringThroughMLIR
   DEPENDS
   MLIRCIROpsIncGen
   MLIRCIREnumsGen
+  MLIRCIRASTAttrInterfacesIncGen
 
   LINK_LIBS
   clangAST
