--- a/clang/lib/CIR/CodeGen/CMakeLists.txt
+++ b/clang/lib/CIR/CodeGen/CMakeLists.txt
@@ -38,6 +38,7 @@ add_clang_library(clangCIR
   DEPENDS
   MLIRCIR
   MLIRCIROpsIncGen
+  MLIRCIRASTAttrInterfacesIncGen
   ${dialect_libs}
 
   LINK_LIBS
