--- a/clang/lib/CIR/Dialect/Transforms/CMakeLists.txt
+++ b/clang/lib/CIR/Dialect/Transforms/CMakeLists.txt
@@ -12,6 +12,7 @@ add_clang_library(MLIRCIRTransforms
   GotoSolver.cpp
   SCFPrepare.cpp
   CallConvLowering.cpp
+  CIRSimplify.cpp
 
   DEPENDS
   MLIRCIRPassIncGen
