[CIR][TargetLowering][NFC] Refactor LowerModule to a unified global state

--- a/clang/lib/CIR/Dialect/Transforms/TargetLowering/CMakeLists.txt
+++ b/clang/lib/CIR/Dialect/Transforms/TargetLowering/CMakeLists.txt
@@ -8,6 +8,7 @@ add_clang_library(TargetLowering
   LowerCall.cpp
   LowerFunction.cpp
   LowerModule.cpp
+  LowerModuleRegistry.cpp
   LowerTypes.cpp
   RecordLayoutBuilder.cpp
   TargetInfo.cpp
